--- a/winterest/package.json
+++ b/winterest/package.json
@@ -19,5 +19,12 @@
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10"
   },
+  "engines": {
+    "node": "12.5.0",
+    "npm": "6.9.0"
+  },
+  "scripts": {
+    "postinstall": "webpack"
+  },
   "version": "0.1.0"
 }
